# predictive-regulation-QEMU

./: .gitignore  README.md
GUI/: SKPS-GUI.pro  SKPS-GUI.pro.user.1ece544
GUI/example/: p2.py
GUI/include/: basicChart.h  chart.h  control.h  controlPanel.h  doubleLineChart.h  pshm_stc.h  regulacja.h  regulation.h  singleLineChart.h  tcpSocket.h
GUI/src/: basicChart.cpp  chart.cpp  control.cpp  controlPanel.cpp  doubleLineChart.cpp  main.cpp  regulacja.cpp  regulation.cpp  singleLineChart.cpp  tcpSocket.cpp
Regulator/: DMC.py  StepResponse.py  qemu-regulator.py
Simulation/: CMakeLists.txt  InPort.cpp  InPort.h  SimObject.cpp  SimObject.h  Simulation.cpp  pshm_stc.cpp  pshm_stc.h  simulation.cpp
config_qemu/: cleanUp.sh  start-qemu.sh  start.sh
