cmake_minimum_required(VERSION 2.8)
project( Simulation )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( Simulation Simulation.cpp )
add_library(SimObject SimObject.cpp)
add_library(InPort InPort.cpp)
add_library(pshm_stc pshm_stc.cpp)
target_link_libraries( Simulation SimObject InPort pshm_stc ${OpenCV_LIBS} pthread rt)
add_compile_options(-Wall -Wextra -pedantic -Werror)